# cheetah-ros

./: README.md
legged_cheetah_description/: CMakeLists.txt  package.xml
legged_cheetah_description/launch/: empty_world.launch
legged_cheetah_description/urdf/: robot.xacro
legged_cheetah_description/urdf/cheetah/: const.xacro
legged_cheetah_description/urdf/common/: leg.xacro
legged_cheetah_hw/: CMakeLists.txt  package.xml
legged_cheetah_hw/config/: cheetah.yaml
legged_cheetah_hw/include/legged_cheetah_hw/: CheetahHW.h
legged_cheetah_hw/include/legged_cheetah_sdk/IMU/: LordIMU.h
legged_cheetah_hw/include/legged_cheetah_sdk/Quadruped/: Cheetah.h
legged_cheetah_hw/include/legged_cheetah_sdk/Support/: Types.h
legged_cheetah_hw/launch/: legged_cheetah_hw.launch
legged_cheetah_hw/src/: CheetahHW.cpp  legged_cheetah_hw.cpp
legged_cheetah_sdk/: CMakeLists.txt  package.xml
legged_cheetah_sdk/include/legged_cheetah_sdk/IMU/: LordImu.h  byteswap_utilities.h  mip.h  mip_sdk.h  mip_sdk_3dm.h  mip_sdk_ahrs.h  mip_sdk_base.h  mip_sdk_filter.h  mip_sdk_gps.h  mip_sdk_interface.h  mip_sdk_system.h  ring_buffer.h
legged_cheetah_sdk/include/legged_cheetah_sdk/Quadruped/: Cheetah.h
legged_cheetah_sdk/include/legged_cheetah_sdk/Support/: Math.h  OrientationTools.h  Types.h
legged_cheetah_sdk/src/IMU/: LordImu.cpp  byteswap_utilities.c  mip.c  mip_sdk_3dm.c  mip_sdk_ahrs.c  mip_sdk_base.c  mip_sdk_filter.c  mip_sdk_gps.c  mip_sdk_inteface.c  mip_sdk_system.c  mip_sdk_user_functions.c  ring_buffer.c
legged_cheetah_sdk/test/: CMakeLists.txt  ImuTest.cpp
