<?xml version="1.0"?>
<package format="2">
  <name>legged_cheetah_description</name>
  <version>0.0.0</version>
  <description>The legged_cheetah_description package</description>
  <maintainer email="TODO@email.com">owlxiao</maintainer>
  <license>TODO</license>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>


</package>
