<?xml version="1.0"?>
<package format="2">
  <name>legged_cheetah_hw</name>
  <version>0.0.0</version>
  <description>The legged_cheetah_hw package</description>
  <maintainer email="todo@todo.todo">xiaoxiao</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>legged_hw</depend>

</package>
